--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    {% load static %}
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,6 +13,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/0e767e0926.js" crossorigin="anonymous"></script>
     <title>{%block title%}{%endblock title%}</title>
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/letter.png' %}"/>
       <style>
           *{
               margin:0px;
@@ -167,7 +169,7 @@ padding: 1em;
   </head>
   <body>
       
-    {% load static %}
+   
     {% load socialaccount %}
     <div class="container-fluid head1">
         <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom bg-dark text-light">
