--- a/templates/about.html
+++ b/templates/about.html
@@ -112,7 +112,7 @@ padding: 10px;
                 <div>
                     <h4>OR</h4>
                     <p>Contact us at: <b class="text-primary">premofdbapatna@gmail.com</b></p>
-                    <p>Please leave your valuable <a href="#">Feedback.</a></p>
+                    <p>Please leave your valuable <a href="/feedback/">Feedback.</a></p>
                 </div>
             </div>
         </div>
