--- a/templates/index.html
+++ b/templates/index.html
@@ -207,7 +207,7 @@ padding: 1em;
             {%else%}
             <li class="nav-item"><a href="/signup/" class="nav-link active mx-2" aria-current="page">Sign Up</a></li>
              <li class="nav-item"><a href="/" class="nav-link active" aria-current="page">Log In</a></li>
-             <li class="nav-item"><a href="about/" class="nav-link ali">AboutUs</a></li>
+             <li class="nav-item"><a href="/about/" class="nav-link ali">AboutUs</a></li>
              {% endif %}
           </ul>
         </header>
