--- a/templates/msgsent.html
+++ b/templates/msgsent.html
@@ -47,9 +47,9 @@ padding: 1em;
 {%block body%}
 <div class=" container  my-4">
     <div class="prpic text-center">
-      {% if pic.picture %}
+      {% if picr.picture %}
       <div>
-    <img src="/media/{{pic.picture}}" alt="" class="userimg userimg1">
+    <img src="/media/{{picr.picture}}" alt="" class="userimg userimg1">
       </div>
       {%else%}
       <div>
