--- a/templates/msgsent.html
+++ b/templates/msgsent.html
@@ -65,7 +65,7 @@ padding: 1em;
 <div class="mb-3">
     <form action="" method="POST">
         {%csrf_token%}
-    <textarea class="form-control txt_area" id="exampleFormControlTextarea1" name="txtarea" rows="8" placeholder="Write your message here..."></textarea>
+    <textarea class="form-control txt_area" id="exampleFormControlTextarea1" name="txtarea" rows="8" placeholder="Write your message here..." required></textarea>
     <div class="m-4 text-center">
     <button type="submit" class="btn btn-primary btn1"> Send <i class="fas fa-paper-plane mx-2"></i></button>
     </div>
