--- a/templates/profile.html
+++ b/templates/profile.html
@@ -308,7 +308,7 @@
       </div>
       <div class="input-group mb-3 link">
         <input type="text" class="form-control linkinput" id="copyinput" placeholder="Recipient's username"
-          value="http://www.secretadmirer.com:8000/user/810384{{user.id}}095757/$msgs/"
+          value="http://www.secretadmirer.com:8000/user/{{user.username}}/810384{{user.id}}095757/$msgs/"
           aria-label="Recipient's username" aria-describedby="basic-addon2" readonly>
         <span class="input-group-text" onclick="Copy()" id="basic-addon2"><b><span id="copytxt">Copy</span></b><i
             class="fas fa-clipboard fa-2x mx-2"></i></span>
